--- a/client/package.json
+++ b/client/package.json
@@ -78,9 +78,14 @@
     "@types/react-dom": "^18.2.8",
     "@types/react-virtualized-auto-sizer": "^1.0.1",
     "@types/url-parse": "^1.4.9",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "^6.7.5",
     "@vitejs/plugin-react": "^4.1.0",
     "electron": "^26.2.4",
     "electron-packager": "^17.1.2",
+    "eslint": "^8.51.0",
+    "eslint-plugin-only-warn": "^1.1.0",
+    "eslint-plugin-react": "^7.33.2",
     "jsdom": "^22.1.0",
     "vitest": "^0.34.6",
     "vitest-canvas-mock": "^0.3.3"
