--- a/client/src/manifest.json
+++ b/client/src/manifest.json
@@ -1,6 +1,8 @@
 {
-  "short_name": "Waypoint",
-  "name": "Waypoint",
+  "short_name": "Visualiser",
+  "name": "Visualiser",
+  "version":"1.0.4",
+  "version_name":"1.0.4; late September 2023",
   "icons": [
     {
       "src": "favicon.png",
@@ -21,5 +23,6 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#607d8b",
-  "background_color": "#546e7a"
+  "background_color": "#546e7a",
+  "display_override": ["window-controls-overlay"]
 }
