--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "private": true,
   "dependencies": {
     "@devbookhq/splitter": "^1.4.2",
@@ -42,6 +42,7 @@
     "socket.io-client": "^4.7.2",
     "string-template-parser": "^1.2.6",
     "typescript": "^5.2.2",
+    "unique-username-generator": "^1.2.0",
     "url-parse": "^1.5.3",
     "vite": "^4.4.9",
     "vite-tsconfig-paths": "^4.2.1"
