--- a/client/src/public/manifest.json
+++ b/client/src/public/manifest.json
@@ -1,10 +1,11 @@
 {
   "short_name": "Visualiser",
   "name": "Visualiser",
-  "version": "1.0.4",
-  "description": "Visualise pathfinding search.",
-  "version_name": "1.0.4 patch 1; mid October 2023",
+  "version": "1.0.5",
+  "description": "Visualise pathfinding search and more",
+  "version_name": "1.0.5; mid October 2023",
   "repository": "https://github.com/path-visualiser/app",
+  "docs": "https://github.com/path-visualiser/app/blob/master/docs",
   "icons": [
     {
       "src": "./favicon.png",
