--- a/resources/traces/v1.0.5/loop.trace.yaml
+++ b/resources/traces/v1.0.5/loop.trace.yaml
@@ -1,4 +1,4 @@
-version: 1.0.5
+version: 1.0.6
 render:
   components:
     tile:
@@ -8,6 +8,11 @@ render:
         x: "{{$.event.x + $.i}}"
         y: "{{$.event.y}}"
         fill: "{{$.color[$.event.type]}}"
+        text: "i: {{$.i}}"
+        textX: 0.1
+        textY: 0.9
+        fontSize: 0.35
+        fontColor: "{{$.themeBackground}}"
         $for:
           $from: 0 # Optional, default 0
           $to: 10 # Optional, default 1
