--- a/client/src/public/manifest.json
+++ b/client/src/public/manifest.json
@@ -1,9 +1,9 @@
 {
   "short_name": "Visualiser",
   "name": "Visualiser",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Visualise pathfinding search and more",
-  "version_name": "1.1.1; early December 2023",
+  "version_name": "1.1.2; mid December 2023",
   "repository": "https://github.com/path-visualiser/app",
   "docs": "https://github.com/path-visualiser/app/blob/master/docs",
   "icons": [
