--- a/client/src/public/manifest.json
+++ b/client/src/public/manifest.json
@@ -1,9 +1,9 @@
 {
   "short_name": "Visualiser",
   "name": "Visualiser",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "Visualise pathfinding search and more",
-  "version_name": "1.1.3; mid January 2024",
+  "version_name": "1.1.4; early February 2024",
   "repository": "https://github.com/path-visualiser/app",
   "docs": "https://github.com/path-visualiser/app/blob/master/docs",
   "icons": [
