--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,10 +3,9 @@ on:
   push:
     branches:
       - master
-    tags:
-      - "v*"
 jobs:
-  checkout:
+  release:
+    if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     env:
       CI: false
