--- a/adapter-fs-bridge/package.json
+++ b/adapter-fs-bridge/package.json
@@ -29,6 +29,7 @@
     "socket.io": "^4.1.3",
     "socket.io-client": "^4.1.3",
     "typed-emitter": "^2.1.0",
+    "untildify": "^5.0.0",
     "vite-node": "^0.34.4",
     "vite-tsconfig-paths": "^4.2.1",
     "yaml": "^2.3.2",
