--- a/adapter-warthog-websocket/package.json
+++ b/adapter-warthog-websocket/package.json
@@ -21,7 +21,7 @@
     "lru-cache": "^6.0.0",
     "md5": "^2.3.0",
     "node-emoji": "^2.1.0",
-    "pathfinding-binaries": "github:path-visualiser/pathfinding#binaries",
+    "pathfinding-binaries": "github:path-visualiser/warthog#binaries",
     "protocol": "file:../protocol",
     "socket.io": "^4.1.3",
     "socket.io-client": "^4.1.3",
