--- a/adapter-fs-bridge/package.json
+++ b/adapter-fs-bridge/package.json
@@ -13,11 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "boxen": "^7.1.1",
+    "bufferutil": "^4.0.7",
     "chalk": "^5.3.0",
     "chokidar": "^3.5.3",
     "eventemitter3": "^5.0.1",
     "express": "^4.17.1",
-    "glob-promise": "^6.0.5",
+    "glob-promise": "^4.2.0",
     "js-yaml": "^4.1.0",
     "json-rpc-2.0": "^0.2.18",
     "lodash": "^4.17.21",
@@ -30,10 +31,9 @@
     "socket.io-client": "^4.1.3",
     "typed-emitter": "^2.1.0",
     "untildify": "^5.0.0",
-    "vite-node": "^0.34.4",
-    "vite-tsconfig-paths": "^4.2.1",
-    "yaml": "^2.3.2",
-    "zod": "^3.22.2"
+    "typescript": "^4.4.4",
+    "yaml": "^2.3.1",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -42,6 +42,10 @@
     "@types/lru-cache": "^5.1.1",
     "@types/md5": "^2.3.1",
     "@types/memoizee": "^0.4.11",
-    "@types/socket.io-client": "^3.0.0"
+    "@types/socket.io-client": "^3.0.0",
+    "vite-node": "^0.34.4",
+    "vite-tsconfig-paths": "^4.2.1",
+    "pkg": "^5.8.1",
+    "vite": "^4.4.7"
   }
 }
