--- a/adapter-warthog-websocket/package.json
+++ b/adapter-warthog-websocket/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "boxen": "^7.1.1",
+    "bufferutil": "^4.0.7",
     "chalk": "^5.3.0",
     "exec-sh": "^0.4.0",
     "express": "^4.17.1",
@@ -26,10 +27,10 @@
     "socket.io": "^4.1.3",
     "socket.io-client": "^4.1.3",
     "tempy": "^1.0.1",
-    "vite-node": "^0.34.4",
-    "vite-tsconfig-paths": "^4.2.1",
-    "yaml": "^2.3.2",
-    "zod": "^3.22.2"
+    "typescript": "^4.4.4",
+    "yaml": "^2.3.1",
+    "zod": "^3.21.4",
+    "js-yaml": "^4.1.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -37,6 +38,12 @@
     "@types/lodash-es": "^4.17.5",
     "@types/lru-cache": "^5.1.1",
     "@types/md5": "^2.3.1",
-    "@types/socket.io-client": "^3.0.0"
+    "@types/socket.io-client": "^3.0.0",
+    "@types/js-yaml": "^4.0.9",
+    "@types/lodash": "^4.14.202",
+    "vite-node": "^0.34.4",
+    "vite-tsconfig-paths": "^4.2.1",
+    "pkg": "^5.8.1",
+    "vite": "^4.4.7"
   }
 }
