--- a/client/package.json
+++ b/client/package.json
@@ -3,30 +3,30 @@
   "version": "1.2.5-2",
   "private": true,
   "dependencies": {
-    "@dagrejs/dagre": "^1.1.4",
+    "@dagrejs/dagre": "^1.1.8",
     "@davstack/store": "^1.4.6",
     "@devbookhq/splitter": "^1.4.2",
     "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@hello-pangea/dnd": "^17.0.0",
-    "@monaco-editor/react": "^4.6.0",
+    "@monaco-editor/react": "^4.7.0",
     "@mui-symbols-material/w300": "^0.4.1",
     "@mui-symbols-material/w400": "^0.4.1",
-    "@mui/icons-material": "^6.4.2",
-    "@mui/lab": "^6.0.0-beta.25",
-    "@mui/material": "^6.4.2",
-    "@react-sigma/core": "^5.0.2",
+    "@mui/icons-material": "^6.5.0",
+    "@mui/lab": "^6.0.0-dev.240424162023-9968b4889d",
+    "@mui/material": "^6.5.0",
+    "@react-sigma/core": "^5.0.6",
     "@sigma/edge-curve": "^3.1.0",
-    "@tanstack/react-query": "^5.66.0",
-    "@tanstack/react-query-devtools": "^5.66.0",
+    "@tanstack/react-query": "^5.90.12",
+    "@tanstack/react-query-devtools": "^5.91.1",
     "@types/object-hash": "^3.0.6",
-    "@xyflow/react": "^12.8.6",
+    "@xyflow/react": "^12.10.0",
     "ajv": "^8.17.1",
     "async": "^3.2.6",
     "capture-console-logs": "^2.0.1-rc.1",
     "caught-object-report-json": "^8.0.0",
     "clipboard-copy": "^4.0.1",
-    "color-interpolate": "^1.0.5",
+    "color-interpolate": "^1.0.7",
     "colortranslator": "^4.1.0",
     "css-element-queries": "^1.2.3",
     "downloadjs": "^1.4.7",
@@ -35,57 +35,57 @@
     "file-select-dialog": "^1.5.4",
     "graphology": "^0.26.0",
     "hotscript": "^1.0.13",
-    "immer": "^10.1.1",
+    "immer": "^10.2.0",
     "internal-renderers": "workspace:*",
     "jimp": "^1.6.0",
-    "js-yaml": "^4.1.0",
+    "js-yaml": "^4.1.1",
     "json-beautify": "^1.1.1",
-    "json-rpc-2.0": "^1.7.0",
+    "json-rpc-2.0": "^1.7.1",
     "load-json-file": "^7.0.1",
     "lodash-es": "^4.17.21",
     "lz-string": "^1.5.0",
-    "material-ui-popup-state": "^5.3.3",
+    "material-ui-popup-state": "^5.3.6",
     "md5": "^2.3.0",
     "memoizee": "^0.4.17",
     "mobile-device-detect": "^0.4.3",
     "moderndash": "^4.0.0",
     "monaco-editor": "^0.52.2",
     "monaco-marker-data-provider": "^1.2.4",
-    "monaco-yaml": "^5.3.1",
-    "nanoid": "^5.0.9",
+    "monaco-yaml": "^5.4.0",
+    "nanoid": "^5.1.6",
     "nearest-pantone": "^1.0.1",
     "object-hash": "^3.0.0",
     "object-sizeof": "^2.6.5",
-    "overlayscrollbars": "^2.10.1",
+    "overlayscrollbars": "^2.13.0",
     "overlayscrollbars-react": "^0.5.6",
     "performant-array-to-tree": "^1.11.0",
     "pluralize": "^8.0.0",
     "promise-tools": "^2.1.0",
     "protocol": "workspace:*",
-    "react": "^19.0.0",
+    "react": "^19.2.1",
     "react-async-hook": "^4.0.0",
     "react-colorful": "^5.6.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.2.1",
     "react-error-boundary": "^5.0.0",
     "react-file-drop": "^3.1.6",
-    "react-reverse-portal": "^2.2.0",
+    "react-reverse-portal": "^2.3.0",
     "react-transition-group": "^4.4.5",
     "react-use": "^17.6.0",
-    "react-virtualized-auto-sizer": "^1.0.25",
-    "react-virtuoso": "^4.12.3",
+    "react-virtualized-auto-sizer": "^1.0.26",
+    "react-virtuoso": "^4.17.0",
     "renderer": "workspace:*",
-    "sigma": "^3.0.1",
+    "sigma": "^3.0.2",
     "socket.io-client": "^4.8.1",
     "string-template-parser": "^1.2.6",
     "sysend": "^1.17.5",
     "typed-emitter": "^2.1.0",
-    "typescript": "^5.7.3",
-    "unique-username-generator": "^1.4.0",
+    "typescript": "^5.9.3",
+    "unique-username-generator": "^1.5.1",
     "url-parse": "^1.5.10",
     "use-window-focus": "^1.4.4",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.9"
   },
   "scripts": {
     "start": "bunx --bun vite --host",
@@ -106,38 +106,38 @@
     ]
   },
   "devDependencies": {
-    "@eslint/js": "^9.19.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
+    "@eslint/js": "^9.39.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/downloadjs": "^1.4.6",
     "@types/gapi": "^0.0.47",
     "@types/google.accounts": "^0.0.15",
     "@types/js-yaml": "^4.0.9",
-    "@types/md5": "^2.3.5",
-    "@types/memoizee": "^0.4.11",
+    "@types/md5": "^2.3.6",
+    "@types/memoizee": "^0.4.12",
     "@types/pluralize": "^0.0.33",
-    "@types/react": "^19.0.8",
+    "@types/react": "^19.2.7",
     "@types/react-beautiful-dnd": "^13.1.8",
-    "@types/react-dom": "^19.0.3",
-    "@types/react-virtualized-auto-sizer": "^1.0.4",
+    "@types/react-dom": "^19.2.3",
+    "@types/react-virtualized-auto-sizer": "^1.0.8",
     "@types/url-parse": "^1.4.11",
-    "@typescript-eslint/eslint-plugin": "^8.23.0",
-    "@typescript-eslint/parser": "^8.23.0",
-    "@vitejs/plugin-react": "^4.3.4",
-    "babel-plugin-react-compiler": "^19.0.0-beta-714736e-20250131",
-    "electron": "^34.0.2",
+    "@typescript-eslint/eslint-plugin": "^8.48.1",
+    "@typescript-eslint/parser": "^8.48.1",
+    "@vitejs/plugin-react": "^4.7.0",
+    "babel-plugin-react-compiler": "^19.0.0-beta-ebf51a3-20250411",
+    "electron": "^34.5.8",
     "electron-packager": "^17.1.2",
-    "eslint": "^9.19.0",
+    "eslint": "^9.39.1",
     "eslint-plugin-only-warn": "^1.1.0",
-    "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-compiler": "^19.0.0-beta-714736e-20250131",
-    "globals": "^15.14.0",
-    "jsdom": "^26.0.0",
-    "typescript-eslint": "^8.23.0",
-    "vite": "^6.0.11",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-compiler": "^19.0.0-beta-ebf51a3-20250411",
+    "globals": "^15.15.0",
+    "jsdom": "^26.1.0",
+    "typescript-eslint": "^8.48.1",
+    "vite": "^6.4.1",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.0.5",
+    "vitest": "^3.2.4",
     "vitest-canvas-mock": "^0.3.3"
   },
   "homepage": ".",
